{{$NEXT}}
   - Deprecate HTML serialization via htmlDoc.dump() method in
     favour of xml6_node_to_buf() with XML_SAVE_XHTML option #90

0.9.3  2023-01-15T06:20:09+13:00
   - Add :%attribs argument to startElementNs() SAX handler

0.9.2  2022-12-02T10:49:43+13:00
   - fix valgrind errors in xmlEncodingStr subset.
   - remove references to DocBook (DOCB). Not used in the Raku bindings,
     deprecated in libxml2, and causing compilation warnings.

0.9.1  2022-11-10T13:48:54+13:00
   - fix LibXML::XPath::Context get-value() for LibXSLT

0.9.0  2022-08-18T06:01:31+12:00
   - Simplify subclassing in complex cases
     This can now be done by inheriting from `LibXML::Config` and adding
     a custom `class-from` method. See t/00subclass.t

0.8.1  2022-08-15T10:53:29+12:00
   - Fix installation v0.8 api installation #84

0.8.0  2022-08-15T09:36:08+12:00
   - Improved encapsulation and inheritability
     -- Provide ways of overriding default classes with user-provided children
        on per-parser (per-document) base.
     -- Implement common config object across all elements of the same document.
     -- Replace CPointer classes with P6opaque
     -- Introduce dedicated exception classes
   - Add `api` key to META6 and LibXML metadata. Add test xt/release/version.t
     this ensures that x.y.0 <= api <= x.y.z, when x.y.z is the current version.

0.7.10  2022-06-28T07:33:30+12:00
   - Fix error handling in SAX callbacks. These are now trapped by
     LibXML::ErrorHandler. Note that exceptions in SAX callbacks now
     halt parsing unless `recover` has been set.
   - Also fix error handling in XPath evaluations. Exceptions were
     incidentally failing by causing stack errors (1223).
   - Define some newly added XPath error codes in LibXML::Enums,
     including 1223 (XML_XPATH_STACK_ERROR)
   - Use generic error-handler in XPath expressions anyway; structured
     errors are geared more towards parsing.
   - More minor optimizations of DOM methods
